Revision history for {{$dist->name}}

{{$NEXT}}

0.003     2013-10-18 01:13:36Z (Karen Etheridge)
          - properly handle .pm files that don't exist on disk yet (e.g.
            ::Conflicts)

0.002     2013-10-17 02:58:11Z (Karen Etheridge)
          - skip checking develop prereqs, (it is not horrible for a plugin or
            bundle to list itself as a develop prereq)

0.001     2013-10-14 02:15:52Z (Karen Etheridge)
          - Initial release.